--- a/src/components/cart-dropdown/cart-dropdown.style.scss
+++ b/src/components/cart-dropdown/cart-dropdown.style.scss
@@ -11,6 +11,11 @@
   right: 40px;
   z-index: 5;
 
+  .empty-message {
+    font-size: 18px;
+    margin: 50px auto;
+  }
+
   .cart-items {
     height: 240px;
     display: flex;
@@ -20,7 +25,7 @@
     /*  Hide Scroll bar */
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
-    
+
     &::-webkit-scrollbar {
       display: none; /* Chrome, Safari and Opera */
     }
