--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -1,4 +1,4 @@
-.header {
+.nav {
     height: 70px;
     width: 100%;
     display: flex;
@@ -11,7 +11,7 @@
       padding: 25px;
     }
   
-    .options {
+    &-link {
       width: 50%;
       height: 100%;
       display: flex;
